--- a/src/app/components/pages/activities/activities.component.scss
+++ b/src/app/components/pages/activities/activities.component.scss
@@ -92,47 +92,142 @@
     position: relative;
 
     height: fit-content;
-    width: 100%;
+    width: calc(100% - 100px);
+    margin-left: auto;
+    margin-right: auto;
 
-    & > .cluster-nav {
+    box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, .3);
+
+    background-color: white;
+    margin-bottom: 10px;
+
+    /* & > .cluster-nav {
         display: flex;
-        justify-content: space-around;
+        justify-content: left;
+        align-items: flex-end;
+
+        padding-left: 100px;
 
         position: relative;
-        /* top: 50%;
-        left: 0;
-        transform: translateY(-50%); */
 
-        height: 80px;
+        height: 70px;
         width: 100%;
 
         & > .cluster-nav-item {
             position: relative;
 
             width: 200px;
-            height: 100%;
+            height: 50px;
 
-            background-color: white;
-            color: black;
+            margin-right: 10px;
+
+            background-color: orange;
+            color: rgb(179, 116, 1);
+
+            user-select: none;
 
             text-align: center;
-            line-height: 80px;
+            line-height: 50px;
 
-            border: 1px solid orange;
-            border-bottom: 0px;
             border-top-left-radius: 3px;
             border-top-right-radius: 3px;
 
+            & > i {
+                font-size: 20px;
+                padding-right: 10px;
+            }
+
             transition: .3s all;
             &.active {
-                background-color: orange;
-                border: 1px solid orange;
-                color: white;
+                height: 70px;
+                line-height: 70px;
+                background-color: white;
+                color: orange;
+
+                box-shadow: 5px 0 px 1px rgba(0, 0, 0, .3);
+
+                z-index: 3;
             }
 
             &:hover {
                 cursor: pointer;
             }
+        }
+    } */
+    & > .cluster-nav {
+        display: flex;
+        position: relative;
+
+        & > .cluster-nav-item {
+            position: relative;
+
+            width: 100%;
+            height: 150px;
+
+            background-color: white;
+
+            & > div {
+                position: absolute;
+                top: 50%;
+                left: 0;
+                transform: translateY(-50%);
+
+                width: 100%;
+                height: fit-content;
+
+                text-align: center;
+
+                color: rgba(black, .5);
+
+                & > i {
+                    display: block;
+                    padding: 10px;
+
+                    font-size: 40px;
+                    
+                }
+            }
+            transform: translateY(-15px);
+            
+            box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, .3);
+            margin-left: 15px;
+            margin-right: 15px;
+
+            transition: .3s all;
+            &.active {
+                transform: translateY(0px);
+                box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, .3);
+                background-color: white;
+                z-index: 3;
+
+                & > div {
+                    color: orange;
+                }
+            }
+
+            &:hover {
+                cursor: pointer;
+            }
+
+            /* &::before {
+                content: '';
+
+                position: absolute;
+                left: 0;
+                top: 50%;
+                transform: translateY(-50%);
+
+                height: 80%;
+                width: 100%;
+
+                border-right: 2px solid rgba(255, 166, 0, 0.329);
+            }
+
+            &:nth-last-child(1) {
+                &::before {
+                    border-right: 0px solid orange;
+                }
+            } */
         }
     }
 
@@ -142,10 +237,11 @@
         min-height: 50vh;
         width: 100%;
 
-        background-color: white;
-        border-bottom: 1px solid orange;
-        border-top: 1px solid orange;
-        /* border-top: 0px; */
+        /* box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, .3);
+
+        background-color: white; */
+        
+        z-index: 2;
 
         & > .header {
             position: relative;
@@ -169,55 +265,67 @@
             padding: 0 50px;
             padding-bottom: 50px;
 
-            & > .header {
+            & > .card {
                 position: relative;
 
-                height: 60px;
+                height: fit-content;
                 width: 100%;
 
-                & > .header-label {
-                    margin-left: 50px;
+                box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, .3);
+                border-radius: 3px;
+
+                padding: 10px;
+
+                & > .header {
                     position: relative;
-
-                    height: 60px;
-                    width: fit-content;
-
-                    background-color: white;
-
-                    font-size: 24px;
-                    color: rgba(0, 0, 0, .6);    
-                    
-                    line-height: 60px;
-                    text-transform: uppercase;
-
-                    & > span {
-                        padding-left: 20px;
-                        padding-right: 20px;
-                    }
-                }
-
-                & > .header-line {
-                    position: absolute;
-                    left: 0;
-                    top: 50%;
-                    transform: translateY(-50%);
     
-                    height: 2px;
+                    height: 60px;
                     width: 100%;
     
-                    background-color: orange;
+                    & > .header-label {
+                        margin-left: 50px;
+                        position: relative;
+    
+                        height: 60px;
+                        width: fit-content;
+    
+                        background-color: white;
+    
+                        font-size: 24px;
+                        color: rgba(0, 0, 0, .6);    
+                        
+                        line-height: 60px;
+                        text-transform: uppercase;
+    
+                        & > span {
+                            padding-left: 20px;
+                            padding-right: 20px;
+                        }
+                    }
+    
+                    & > .header-line {
+                        position: absolute;
+                        left: 0;
+                        top: 50%;
+                        transform: translateY(-50%);
+        
+                        height: 2px;
+                        width: 100%;
+        
+                        background-color: orange;
+                    }
                 }
-            }
-
-            & > .content {
-                position: relative;
-
-                min-height: 40vh;
-                width: 100%;
-
-                padding-top: 30px;
-
-                /* background-color: orange; */
+    
+                & > .content {
+                    position: relative;
+    
+                    min-height: 40vh;
+                    width: 100%;
+    
+                    padding-top: 30px;
+    
+                    /* background-color: orange; */
+                }
             }
 
             
@@ -228,14 +336,14 @@
 .act-card {
     position: relative;
 
-    height: 400px;
+    height: 300px;
     width: 90%;
 
     margin-left: auto;
     margin-right: auto;
     
     box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, .3);
-    border-radius: 5px;
+    border-radius: 3px;
 
     overflow: hidden;
 
@@ -247,10 +355,10 @@
 
         padding-left: 20px;
         
-        font-size: 24px;
+        font-size: 20px;
         line-height: 60px;
 
-        background-color: rgba(0, 0, 0, .8);
+        background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0.5) 82%, rgba(0,0,0,0) 100%);
         color: white;
 
         z-index: 2;
@@ -284,27 +392,49 @@
         height: 120px;
         width: 100%;
 
-        background-color: rgba(0, 0, 0, .8);
+        background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0.5) 82%, rgba(0,0,0,0) 100%);
         color: white;
 
         padding: 10px 20px;
+        padding-top: 30px;
 
-        font-size: 18px;
+        font-size: 15px;
 
         z-index: 2;
 
         transition: .3s all;
+
+        & > .prop {
+            position: absolute;
+            right: 0;
+            bottom: 0;
+
+            padding: 10px;
+
+            font-size: 12px;
+            color: white;
+
+            & > div {
+                display: inline-block;
+
+                padding-right: 15px;
+
+                & > i {
+                    padding-right: 3px;
+                }
+            }
+        }
     }
 
     &:hover {
-        & > .header {
-            opacity: .05;
-        }
+       /*  & > .header {
+            opacity: .5;
+        } */
         & > .img {
-            transform: scale(1.1);
+            transform: scale(1.05);
         }
-        & > .brief {
-            opacity: .05;
-        }
+        /* & > .brief {
+            opacity: .5;
+        } */
     }
 }
