rework in progress

--- a/src/app/components/shared/news/post/post.component.html
+++ b/src/app/components/shared/news/post/post.component.html
@@ -87,8 +87,8 @@
             <div class="news-action">
                 <!-- <p-button label="Cancel" class="btn-cancel" styleClass="ui-button-secondary"></p-button> -->
                 <!-- <p-button label="Post" (click)="this.uploadNews()"></p-button> -->
-                <div class="btn-post">
-                    <span (click)="this.uploadNews()">POST</span>
+                <div class="btn-post" (click)="this.uploadNews()">
+                    <span>POST</span>
                 </div>
             </div>
                 
