--- a/src/app/components/pages/user/membership/subscription/subscription.component.html
+++ b/src/app/components/pages/user/membership/subscription/subscription.component.html
@@ -1,4 +1,4 @@
-<div class="body">
+<!-- <div class="body">
   <div class="card">
     <div class="card-header">
       <div class="title">
@@ -7,7 +7,6 @@
 
       <div class="member-status">
         <span>CA19144</span>
-        <!-- <span>Status:</span> -->
         <span>UNPAID</span>
       </div>
     </div>
@@ -85,25 +84,159 @@
       <hr>
     </div>
   </div>
-  
-    <!-- <div class="p-col-2">
-    
-    </div>
-    <div class="p-col-8">
-      <div class="title">
-        <span>Subscription Information</span>
-      </div> 
-        Member No
-        <hr>
-        Username
-        <hr>
-        Membership Level
-        <hr>
-        Membership Status
-        <hr>
-        Member Since
+</div>
+ -->
 
+<div class="wrapper">
+  <div class="info">
+    <div class="header">
+      <span>Subscription information</span>
     </div>
-    <div class="p-col-2">
-    </div> -->
+
+    <div class="body">
+      <div class="info-items">
+        <div class="info-item">
+          <div class="label">
+            <span>Fullname</span>
+          </div>
+          <div class="value">
+            <span>Muhammad Aidil Syazwan bin Hamdan</span>
+          </div>
+        </div>
+        <div class="info-item">
+          <div class="label">
+            <span>MyRAS ID</span>
+          </div>
+          <div class="value">
+            <span>MYRAS00032</span>
+          </div>
+        </div>
+        <div class="info-item">
+          <div class="label">
+            <span>Membership</span>
+          </div>
+          <div class="value">
+            <span>Student</span>
+          </div>
+        </div>
+        <div class="info-item">
+          <div class="label">
+            <span>Lifetime</span>
+          </div>
+          <div class="value">
+            <span>YES</span>
+          </div>
+        </div>
+        <div class="info-item">
+          <div class="label">
+            <span>Phone number</span>
+          </div>
+          <div class="value">
+            <span>+601136528964</span>
+          </div>
+        </div>
+        <div class="info-item">
+          <div class="label">
+            <span>Email</span>
+          </div>
+          <div class="value">
+            <span>aidilsyaz@myras.org</span>
+          </div>
+        </div>
+        <div class="info-item">
+          <div class="label">
+            <span>Mailing address</span>
+          </div>
+          <div class="value">
+            <span>No. 114, Kg Kroh Hilir</span>
+            <span>Padang Rengas, 33700</span>
+            <span>Perak</span>
+          </div>
+        </div>
+        
+      </div>
+    </div>
+
+    <div class="footer">
+      <div class="total">
+        <span>Fee: RM200</span>
+      </div>
+      <div class="btn-order">
+        <span>Proceed to checkout</span>
+      </div>
+    </div>
+  </div>
+
+  <div class="status">
+    <div class="header">
+        <i class="fas fa-tasks"></i>
+        <span>Status</span>
+    </div>
+
+    <div class="body">
+      <div class="status-label">
+        <span>Active</span>
+      </div>
+      <div class="reasons">
+        <div class="reason">
+          <div class="label">
+            <span>Membership fee</span>
+          </div>
+          <div class="value">
+            <span>Paid</span>
+          </div>
+        </div>
+        <div class="reason">
+          <div class="label">
+            <span>Compulsory info</span>
+          </div>
+          <div class="value">
+            <span>Provided</span>
+          </div>
+        </div>
+        <div class="reason">
+          <div class="label">
+            <span>Account status</span>
+          </div>
+          <div class="value">
+            <span>Enabled</span>
+          </div>
+        </div>
+        
+      </div>
+    </div>
+  </div>
+
+  <div class="timeleft">
+    <div class="header">
+        <i class="fas fa-tasks"></i>
+        <span>Validity</span>
+    </div>
+
+    <div class="body">
+      <div class="days">
+        <span>365</span>
+      </div>
+      <div class="days-text">
+        <span>days before renewal</span>
+      </div>
+
+      <div class="start">
+        <div class="label">
+          <span>Start</span>
+        </div>
+        <div class="value">
+          <span>3/1/2099</span>
+        </div>
+      </div>
+      <div class="end">
+        <div class="label">
+          <span>End</span>
+        </div>
+        <div class="value">
+          <span>3/1/2100</span>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
