--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -436,13 +436,13 @@
 
 .user-body {
     margin-left: 250px;
-    padding: 50px;
+    margin-top: 40px;
 
     transition: .3s all;
 
     position: relative;
 
-    min-height: 100vh;
+    min-height: calc(100vh - 40px);
     height: 100%;
     width: calc(100% - 250px);
 
